<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Comapping</string>

	<string name="search_label">Comapping</string>
	<string name="search_hint">Search in the current map</string>

    <!-- common -->
    <string name="NeutralButtonText">OK</string>
    <string name="PositiveButtonText">Yes</string>
    <string name="NegativeButtonText">No</string>
    <string name="BytesIntegerSizeFormat" formatted="false">%d bytes</string>
    <string name="KBytesIntegerSizeFormat" formatted="false">%d KB</string>
    <string name="BytesFloatSizeFormat" formatted="false">%.2f bytes</string>
    <string name="KBytesFloatSizeFormat" formatted="false">%.2f KB</string>
    <string name="MBytesFloatSizeFormat" formatted="false">%.2f MB</string>
    <string name="GBytesFloatSizeFormat" formatted="false">%.2f GB</string>

    <!-- map menu -->
    <string name="MenuSearch">Search</string>
    <string name="MenuZoom">Zoom</string>
    <string name="MenuSwitchView">Switch view</string>
    <string name="MenuSynchronize">Synchronize</string>
    <string name="MenuSaveAs">Save as</string>

    <!-- meta map & login menu -->
    <string name="MenuLogout">Logout</string>
    <string name="MenuPreferences">Preferences</string>
    <string name="MenuAbout">About</string>

    <!-- Login activity -->
    <string name="LoginAttempt">Login attempt…</string>
    <string name="AutologinAttemptFailed">Autologin attempt failed</string>
    <string name="ConnectionError">Connection error</string>
    <string name="EmailOrPasswordIncorrect">E-mail or password is incorrect</string>
    <string name="UnknownResult">Unknown result</string>
    <string name="LoginActivitySplashTitle">Comapping</string>

    <!-- Map activity -->
    <string name="LargeMapAlertText">The map is very large. Operation can take a long time. Continue?</string>
    <string name="MapActivitySplashTitle">Comapping</string>
    <string name="MapActivityErrorDialogTitle">Error</string>
    <string name="DownloadingMap">Downloading map</string>
    <string name="MapNotFoundOnServer">This map wasn\'t found on server!</string>
    <string name="ParsingMap">Parsing map</string>
    <string name="LoadingMap">Loading map</string>
    <string name="WrongFileFormat">Wrong file format</string>
    <string name="SaveMapDialogTitle">Save map</string>
    <string name="SaveMapDialogMessageFormat" formatted="false">Map: %s\nSave to %s ?</string>
    <string name="MapActivityAlertDialogTitle">Alert Message</string>
    <string name="CannotDownloadSdNotInstalled">You can\'t download this file, because SD card is not installed.
    </string>
    <string name="MapActivityNothingFound">Nothing found!</string>

    <!-- Meta map activity -->
    <string name="PleaseSyncronizeMapList">Please synchronize your map list or open SD card view</string>
    <string name="PleaseSyncronizeMapListNoSd">Please synchronize your map list.</string>
    <string name="EmptyFolder">Folder is empty</string>
    <string name="MetaMapSplashTitle">Comapping</string>
    <string name="LoadingMapList">Loading Map List…</string>

    <!-- Map content provider -->
    <string name="LastSynchronizationFormat" formatted="false">Last synchronization %s\nSize: %s</string>
    <string name="NotSynchronizedYet">Not syncronized yet</string>
    <string name="JustNow">just now</string>
    <string name="MinuteAgoFormat" formatted="false">%d minute ago</string>
    <string name="MinutesAgoFormat" formatted="false">%d minutes ago</string>
    <string name="HourAgoFormat" formatted="false">%d hour ago</string>
    <string name="HoursAgoFormat" formatted="false">%d hours ago</string>
    <string name="DayAgoFormat" formatted="false">%d day ago</string>
    <string name="DaysAgoFormat" formatted="false">%d days ago</string>

    <!-- preferences -->
    <string name="view_type_preference_key">viewType</string>
    <string name="view_type_preference_title">View type</string>

    <string name="explorer_view_value">Explorer view</string>
    <string name="comapping_view_value">Comapping view</string>

    <string name="download_folder_preference_key">downloadFolder</string>
    <string name="download_folder_preference_title">Download Folder</string>
    <string name="download_folder_preference_dialogTitle">Specify attachments downloading folder</string>

    <string name="full_screen_preference_key">fullScreenMode</string>
    <string name="full_screen_preference_title">Full Screen</string>

    <string name="use_proxy_preference_key">useProxy</string>
    <string name="use_proxy_preference_title">Enable proxy</string>
    <string name="proxy_host_preference_key">proxyHost</string>
    <string name="proxy_host_preference_title">Proxy host</string>
    <string name="proxy_port_preference_key">proxyPort</string>
    <string name="proxy_port_preference_title">Proxy port</string>
    <string name="use_proxy_auth_preference_key">useProxyAuth</string>
    <string name="use_proxy_auth_preference_title">Use proxy auth</string>
    <string name="proxy_name_preference_key">proxyAuthUserName</string>
    <string name="proxy_name_preference_title">Proxy User Name</string>
    <string name="proxy_password_preference_key">proxyAuthUserPassword</string>
    <string name="proxy_password_preference_title">Proxy Password</string>

    <!-- about dialog -->
    <string name="AboutDialogTitle">About Comap viewer</string>
    <string name="AboutDevelopers">
        <![CDATA[
        Comapping is online mind mapping software to manage and share information.
        Use it to take notes, plan and organize.
        It\'s a way to have one set of notes. One set of files. For everyone.\n
        \nMap out your work. Map out your life. Become a Comapper.\n\n\n
        Version: 1.0.0\n
        Release date: 15.06.12\n
        E-mail: contact@lanit-tercom.com\n
        \n
        Developers:\n
        Timur Abishev\n
        Yuri Zemlyanskiy\n
        Grigory Kalabin\n
        Dmitriy Kozorez\n
        Stepan Korshakov\n
        Vladimir Kulikov\n
        Dmitriy Manaev\n
        Victor Passichenko\n
        \n
        Project managers:\n
        Nikolay Artamonov\n
        Dmitriy Kichinsky\n
        ]]>
    </string>

    <!-- map render -->
    <string name="AttachmentDialogTitle">Attachment</string>
    <string name="AttachmentSave">Save</string>
    <string name="AttachmentSaveAndOpen">Open</string>
    <string name="AttachmentCancel">Cancel</string>
    <string name="AttachmentDialogMessageFormat" formatted="false">File: %s\nUpload date: %s\nSize: %s\n\nWill be saved in %s</string>
    <string name="ErrorDownloadingAndSavingFile">Error while downloading and saving file</string>
    <string name="AttachmentUnknownFileType">Unable to open file: unknown file type</string>
    <string name="AttachmentAlertDialogTitle">Alert Message</string>
    <string name="AttachmentAlertSdNotInstalled">You can\'t download this file because SD card is not installed.
    </string>

    <!-- notes render -->
    <string name="NoteDialogTitle">Note</string>

    <!-- tasks render -->
    <string name="TaskStartFormat" formatted="false">Start: %s</string>
    <string name="TaskDeadlineFormat" formatted="false">Deadline: %s</string>
    <string name="TaskEstimateFormat" formatted="false">Estimate: %s</string>
    <string name="TaskDialogTitle">Task</string>
    <string name="TaskDialogMessageFormat" formatted="false">Responsible: %s\nStart date: %s\nDeadline: %s\nEstimate: %s</string>

    <!-- Login layout -->
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember me</string>
    <string name="Login">Login</string>

    <!-- Meta map layout -->
    <string name="MetaMapTryToSynchronize">Try to syncronize or open SD-card or other folder</string>
    <string name="MetaMapWelcomeMap">Welcome map</string>
    <string name="MetaMapNoAvailableText">no avalible text</string>

    <!-- Preferences layout -->
    <string name="PreferencesView">View</string>
    <string name="PreferencesAttachment">Attachment</string>
    <string name="PreferencesProxySettings">Proxy settings</string>
    <string name="PreferencesProxySummary">Manage proxy, set proxy auth.</string>
    <string name="PreferencesEnableProxy">Enable proxy</string>
    <string name="PreferencesProxyAuth">Proxy Auth</string>
    <string name="PreferencesProxyHostHint">Enter proxy host</string>
    <string name="PreferencesProxyPortHint">Enter port number (max 65536)</string>
    <string name="PreferencesProxyLoginHint">Enter Login for proxy</string>
    <string name="PreferencesProxyPasswordHint">Enter Pass for proxy</string>

    <!-- context menu -->
    <string name="OpenFolder">Open folder</string>
    <string name="OpenMap">Open Map</string>
    <string name="OpenWithExplorerView">Open with Explorer view</string>
    <string name="OpenWithComappingView">Open with Comapping view</string>

</resources>
