<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
	<PreferenceCategory android:title="@string/PreferencesView">
		<ListPreference 
			android:key="@string/view_type_preference_key"
			android:title="@string/view_type_preference_title" 
			android:entries="@array/view_types"
			android:entryValues="@array/view_types" 
			android:defaultValue="@string/comapping_view_value" />
        <CheckBoxPreference
                android:key="@string/full_screen_preference_key"
                android:title="@string/full_screen_preference_title"
                />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/PreferencesAttachment">
		<EditTextPreference 
			android:key="@string/download_folder_preference_key"
			android:title="@string/download_folder_preference_title"
			android:dialogTitle="@string/download_folder_preference_dialogTitle" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/PreferencesProxySettings">
		<PreferenceScreen android:title="@string/PreferencesProxySettings"
			android:summary="@string/PreferencesProxySummary">
			<PreferenceCategory android:title="@string/PreferencesEnableProxy">
				<CheckBoxPreference 
					android:key="@string/use_proxy_preference_key"
					android:title="@string/use_proxy_preference_title" />
				<EditTextPreference 
					android:key="@string/proxy_host_preference_key"
					android:title="@string/proxy_host_preference_title"
					android:dependency="@string/use_proxy_preference_key"
					android:hint="@string/PreferencesProxyHostHint"/>
				<EditTextPreference 
					android:key="@string/proxy_port_preference_key"
					android:title="@string/proxy_port_preference_title"
					android:dependency="@string/use_proxy_preference_key"
					android:numeric="integer"
                    android:maxLength="5"
                    android:hint="@string/PreferencesProxyPortHint"/>
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/PreferencesProxyAuth">
				<CheckBoxPreference 
					android:key="@string/use_proxy_auth_preference_key"
					android:title="@string/use_proxy_auth_preference_title"
					android:dependency="@string/use_proxy_preference_key" 
					/>
				<EditTextPreference 
					android:key="@string/proxy_name_preference_key"
					android:title="@string/proxy_name_preference_title"
					android:dependency="@string/use_proxy_auth_preference_key" 
					android:hint="@string/PreferencesProxyLoginHint"/>
				<EditTextPreference 
					android:key="@string/proxy_password_preference_key"
					android:title="@string/proxy_password_preference_title"
					android:dependency="@string/use_proxy_auth_preference_key" 
					android:hint="@string/PreferencesProxyPasswordHint"/>
			</PreferenceCategory>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>